Fix: Fixing the streak calculator and making api to call it whenever needed